--- a/Maximum_Likelihood_Estimate.ipynb
+++ b/Maximum_Likelihood_Estimate.ipynb
@@ -169,7 +169,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "为什么我上传到github的账户里的文件为什么不能正常显示公式？"
+   ]
   },
   {
    "cell_type": "markdown",
